--- a/app/src/main/res/layout/fragment_schedule.xml
+++ b/app/src/main/res/layout/fragment_schedule.xml
@@ -6,13 +6,18 @@
     tools:context=".ScheduleFragment">
 
     <!-- TODO: Update blank fragment layout -->
+
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/schedule"
-        android:textSize="50sp"
-        android:textColor="@color/black"
         android:layout_gravity="center"
-        />
+        android:text="@string/schedule"
+        android:textColor="@color/black"
+        android:textSize="50sp" />
+
+    <CalendarView
+        android:id="@+id/calendarView"
+        android:layout_width="match_parent"
+        android:layout_height="317dp" />
 
 </FrameLayout>
