--- a/app/src/main/res/layout/activity_create__company.xml
+++ b/app/src/main/res/layout/activity_create__company.xml
@@ -78,21 +78,25 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
+            android:layout_marginLeft="10dp"
+            android:layout_marginRight="5dp"
             android:layout_weight="1"
+            android:background="@android:color/holo_blue_dark"
             android:gravity="center"
             android:text="취소"
-            android:layout_marginLeft="10dp"
-            android:layout_marginRight="5dp"/>
+            android:textColor="@android:color/white" />
 
         <Button
             android:id="@+id/button2"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
+            android:layout_marginLeft="5dp"
+            android:layout_marginRight="10dp"
             android:layout_weight="1"
+            android:background="@android:color/holo_blue_dark"
             android:gravity="center"
             android:text="다음"
-            android:layout_marginLeft="5dp"
-            android:layout_marginRight="10dp"/>
+            android:textColor="@android:color/white" />
     </LinearLayout>
 </LinearLayout>
