--- a/app/src/main/res/layout/activity_schedule_group_set1.xml
+++ b/app/src/main/res/layout/activity_schedule_group_set1.xml
@@ -26,7 +26,7 @@
         android:layout_marginStart="17dp"
         android:layout_marginLeft="17dp"
         android:layout_marginTop="112dp"
-        android:text="최대 근무조 설정"
+        android:text="최대근무조 설정"
         android:textSize="20dp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
@@ -47,11 +47,10 @@
 
     <Spinner
         android:id="@+id/schedule_group_set1_spinner"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="115dp"
-        android:layout_marginEnd="45dp"
-        android:layout_marginRight="45dp"
+        android:layout_width="61dp"
+        android:layout_height="34dp"
+        android:layout_marginTop="112dp"
+        android:layout_marginEnd="28dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -68,4 +67,5 @@
         android:textSize="20dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
