--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -5,7 +5,8 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="vertical"
-    tools:context=".LoginActivity">
+    android:background="#0794AF"
+    tools:context=".View.LoginActivity">
 
     <ImageView
         android:id="@+id/imageView"
@@ -18,30 +19,30 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="20dp"
-        android:textSize="50dp"
-        android:textStyle="bold"
         android:gravity="center"
-        android:text="로그인" />
+        android:text="로그인"
+        android:textSize="50dp"
+        android:textStyle="bold" />
 
     <EditText
         android:id="@+id/login_email"
-        android:layout_marginTop="20dp"
-        android:layout_gravity="center"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:layout_marginTop="20dp"
         android:ems="12"
-        android:inputType="textPersonName"
-        android:hint="Email" />
+        android:hint="Email"
+        android:inputType="textPersonName" />
 
     <EditText
         android:id="@+id/login_password"
-        android:layout_marginTop="10dp"
-        android:layout_gravity="center"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:layout_marginTop="10dp"
         android:ems="12"
-        android:inputType="textPassword"
-        android:hint="Password" />
+        android:hint="Password"
+        android:inputType="textPassword" />
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -53,13 +54,13 @@
             android:id="@+id/login_btn"
             android:layout_width="105dp"
             android:layout_height="wrap_content"
-            android:textSize="30dp"
-            android:textStyle="bold"
             android:layout_marginLeft="80dp"
             android:layout_marginTop="10dp"
             android:layout_weight="1"
-            android:background="#78ADE2"
-            android:text="로그인" />
+            android:background="#D32760"
+            android:text="로그인"
+            android:textSize="30dp"
+            android:textStyle="bold" />
 
         <TextView
             android:id="@+id/textView2"
@@ -67,17 +68,16 @@
             android:layout_height="wrap_content"
             android:layout_marginLeft="10dp"
             android:layout_marginTop="5dp"
-            android:layout_weight=""
+
             android:text="자동 로그인"
             android:textSize="18sp"
             android:textStyle="bold" />
 
         <CheckBox
             android:id="@+id/checkBox"
-            android:layout_marginTop="3dp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_weight=""
+            android:layout_marginTop="3dp"
             android:text="" />
     </LinearLayout>
 
@@ -85,19 +85,24 @@
         android:id="@+id/register_btn"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="25dp"
         android:layout_marginLeft="150dp"
-        android:textColor="#001DFA"
-        android:text="처음 이십니까? 회원가입 하러가기" />
+        android:layout_marginTop="25dp"
+        android:text="처음 이십니까? 회원가입 하러가기"
+        android:textColor="#001DFA" />
 
     <TextView
         android:id="@+id/password_find_btn"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="5dp"
         android:layout_marginLeft="150dp"
-        android:textColor="#001DFA"
-        android:text="비밀번호를 잊으셨습니까? 비밀번호 찾기" />
+        android:layout_marginTop="5dp"
+        android:text="비밀번호를 잊으셨습니까? 비밀번호 찾기"
+        android:textColor="#001DFA" />
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="105dp"
+        android:orientation="vertical"></LinearLayout>
 
 
 </LinearLayout>
