--- a/app/src/main/res/layout/activity_add__work__location.xml
+++ b/app/src/main/res/layout/activity_add__work__location.xml
@@ -61,15 +61,18 @@
 
             <androidx.recyclerview.widget.RecyclerView
                 android:layout_width="match_parent"
-                android:layout_height="match_parent" />
+                android:layout_height="match_parent"
+                android:layout_marginTop="10dp"/>
 
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:orientation="horizontal">
+                android:orientation="horizontal"
+                android:layout_marginTop="20dp"
+                android:layout_marginBottom="10dp">
 
                 <Button
-                    android:id="@+id/button3"
+                    android:id="@+id/button_cancel"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginLeft="10dp"
@@ -81,7 +84,7 @@
                     android:textColor="@android:color/white" />
 
                 <Button
-                    android:id="@+id/button4"
+                    android:id="@+id/button_create_company"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginLeft="5dp"
