--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,4 +4,11 @@
     <color name="colorPrimaryDark">#00574B</color>
     <color name="colorAccent">#D81B60</color>
     <color name="black">#000000</color>
+    <color name="gray">#808080</color>
+    <color name="gray2">#D3D3D3</color>
+    <color name="sky">#00BFFF</color>
+    <color name="red">#FF0000</color>
+    <color name="green">#008000</color>
+    <color name="blue">#4169E1</color>
+    <color name="transparentblue">#804169E1</color>
 </resources>
