--- a/app/src/main/res/layout/activity_select_company.xml
+++ b/app/src/main/res/layout/activity_select_company.xml
@@ -7,49 +7,49 @@
     android:orientation="vertical"
     tools:context=".view.select_company.Select_company">
 
-<!--    <androidx.appcompat.widget.Toolbar-->
-<!--        android:id="@+id/toolbar"-->
-<!--        android:layout_width="match_parent"-->
-<!--        android:layout_height="wrap_content"-->
-<!--        android:background="#7FC4A6"-->
-<!--        tools:ignore="MissingConstraints">-->
-
-<!--        <TextView-->
-<!--            android:id="@+id/set_date"-->
-<!--            android:layout_width="wrap_content"-->
-<!--            android:layout_height="wrap_content"-->
-<!--            android:text="회사 선택"-->
-<!--            android:textColor="@android:color/white"-->
-<!--            android:textSize="17sp"-->
-<!--            android:textStyle="bold" />-->
-<!--    </androidx.appcompat.widget.Toolbar>-->
-    <LinearLayout
+    <androidx.appcompat.widget.Toolbar
+        android:id="@+id/select_company_toolbar"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        android:layout_marginTop="20dp">
+        android:background="#7FC4A6"
+        tools:ignore="MissingConstraints">
 
         <TextView
-            android:id="@+id/textView"
+            android:id="@+id/set_date"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:gravity="center"
             android:text="회사 선택"
-            android:textColor="@android:color/black"
-            android:textSize="30dp"
-            android:layout_marginLeft="160dp" />
+            android:textColor="@android:color/white"
+            android:textSize="17sp"
+            android:textStyle="bold" />
+    </androidx.appcompat.widget.Toolbar>
+<!--    <LinearLayout-->
+<!--        android:layout_width="match_parent"-->
+<!--        android:layout_height="wrap_content"-->
+<!--        android:orientation="horizontal"-->
+<!--        android:layout_marginTop="20dp">-->
 
-        <ImageButton
-            android:id="@+id/imageButton"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:background="#00FFFFFF"
-            app:srcCompat="@drawable/ic_settings_black_24dp"
-            tools:ignore="VectorDrawableCompat"
-            android:layout_marginLeft="100dp"
-            />
-    </LinearLayout>
+<!--        <TextView-->
+<!--            android:id="@+id/textView"-->
+<!--            android:layout_width="wrap_content"-->
+<!--            android:layout_height="wrap_content"-->
+<!--            android:layout_gravity="center"-->
+<!--            android:gravity="center"-->
+<!--            android:text="회사 선택"-->
+<!--            android:textColor="@android:color/black"-->
+<!--            android:textSize="30dp"-->
+<!--            android:layout_marginLeft="160dp" />-->
+
+<!--        <ImageButton-->
+<!--            android:id="@+id/imageButton"-->
+<!--            android:layout_width="wrap_content"-->
+<!--            android:layout_height="wrap_content"-->
+<!--            android:background="#00FFFFFF"-->
+<!--            app:srcCompat="@drawable/ic_settings_black_24dp"-->
+<!--            tools:ignore="VectorDrawableCompat"-->
+<!--            android:layout_marginLeft="100dp"-->
+<!--            />-->
+<!--    </LinearLayout>-->
 
 
     <androidx.recyclerview.widget.RecyclerView
