--- a/app/src/main/res/layout/activity_reqvacation.xml
+++ b/app/src/main/res/layout/activity_reqvacation.xml
@@ -65,7 +65,7 @@
                 app:layout_constraintTop_toTopOf="parent"
                 app:mcv_firstDayOfWeek="monday"
                 app:mcv_showOtherDates="defaults"
-                app:mcv_selectionColor="#00F"/>
+                app:mcv_selectionColor="@color/green"/>
 
             <View
                 android:id="@+id/view2"
@@ -166,9 +166,12 @@
                 android:hint="휴가 사유를 입력하십시오."
                 android:id="@+id/vacareason"
                 android:gravity="start"
+                android:textSize="15dp"
+                android:paddingHorizontal="10dp"
+                android:scrollbars="vertical"
                 app:layout_constraintTop_toBottomOf="@+id/view5"
                 android:layout_width="match_parent"
-                android:layout_height="110dp"/>
+                android:layout_height="130dp"/>
         </androidx.constraintlayout.widget.ConstraintLayout>
     </androidx.core.widget.NestedScrollView>
 </androidx.constraintlayout.widget.ConstraintLayout>
