--- a/app/src/main/res/layout/activity_detailvaca.xml
+++ b/app/src/main/res/layout/activity_detailvaca.xml
@@ -90,30 +90,34 @@
 
     <TextView
         android:id="@+id/vacadatetext"
+        android:layout_width="wrap_content"
+        android:layout_height="60dp"
+        android:gravity="start|center"
+        android:padding="10dp"
         android:text="휴가 날짜"
         android:textSize="20dp"
-        android:padding="10dp"
-        android:gravity="start|center"
+        app:layout_constraintBottom_toBottomOf="@id/vacadate"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/view2"
-        android:layout_width="wrap_content"
-        android:layout_height="60dp"/>
+        app:layout_constraintTop_toTopOf="@+id/vacadate" />
 
     <TextView
+        android:minHeight="60dp"
+        android:scrollbars="vertical"
+        android:id="@+id/vacadate"
+        android:maxLines="3"
         android:text="0000년 00월 00일 (월)"
         android:textSize="20dp"
         android:padding="10dp"
         android:gravity="start|center"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="@id/vacadatetext"
-        app:layout_constraintBottom_toBottomOf="@id/vacadatetext"
+        app:layout_constraintTop_toBottomOf="@id/view2"
         android:layout_width="wrap_content"
-        android:layout_height="0dp"/>
+        android:layout_height="wrap_content"/>
 
     <View
         android:background="@color/gray"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/vacadatetext"
+        app:layout_constraintTop_toBottomOf="@+id/vacadate"
         android:layout_width="match_parent"
         android:layout_height="0.5dp" android:id="@+id/view3"/>
 
@@ -272,7 +276,7 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/view8"
         android:layout_width="wrap_content"
-        android:layout_height="60dp"/>
+        android:layout_height="wrap_content"/>
 
     <TextView
         android:id="@+id/vacareason"
@@ -282,7 +286,7 @@
         android:scrollbars="vertical"
         app:layout_constraintTop_toBottomOf="@id/vacareasontext"
         android:layout_width="match_parent"
-        android:layout_height="110dp"/>
+        android:layout_height="130dp"/>
 
     <View
         android:background="@color/gray"
