--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -10,5 +10,6 @@
     <color name="red">#FF0000</color>
     <color name="green">#008000</color>
     <color name="blue">#4169E1</color>
+    <color name="mint">#CFFFE5</color>
     <color name="transparentblue">#804169E1</color>
 </resources>
