--- a/app/src/main/res/layout/activity_schedule_list_set.xml
+++ b/app/src/main/res/layout/activity_schedule_list_set.xml
@@ -73,6 +73,7 @@
     </com.applikeysolutions.cosmocalendar.view.CalendarView>
 
     <LinearLayout
+        android:id="@+id/linearLayout"
         android:layout_width="wrap_content"
         android:layout_height="100dp"
         android:layout_marginStart="17dp"
@@ -107,11 +108,10 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
-        android:layout_marginTop="240dp"
         android:text="할일 설정"
         android:textSize="20dp"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />
 
     <View
         android:id="@+id/textView9"
